# llm_slack_chat

./: .gitignore  README.md  pyproject.toml  run.py
scripts/: start.sh  stop.sh
src/: chat_bot.py  config.py  llm_client.py  logger_config.py  main.py  session_manager.py  slack_handler.py
src/llm/: __init__.py  manager.py  ollama_client.py
src/utils/: __init__.py  api_utils.py  error_handler.py  logging_utils.py  validation.py
