[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-slack-chat"
version = "0.1.0"
description = "A chat bot that lets you chat with LLMs from Slack"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "slack-bolt>=1.18.0",
    "requests>=2.31.0",
    "python-dotenv>=1.1.1",
    "httpx>=0.28.1",
    "fastmcp>=2.10.2",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
llm-slack-chat = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
exclude = [
    "tests/",
    "*.db",
    ".env*",
    "__pycache__/",
    "*.pyc",
    ".pytest_cache/",
    ".coverage",
    "htmlcov/",
    ".git/"
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true


[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=.",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=80",
]


[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    ".venv/*",
    "venv/*",
    "*/site-packages/*",
    "setup.py",
    "conftest.py",
    "__pycache__/*",
    "*.pyc",
    ".git/*",
    ".pytest_cache/*",
    "build/*",
    "dist/*",
    "*.egg-info/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "pass",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true

[tool.coverage.html]
directory = "htmlcov"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
]
